# sydent

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.rst  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  pipeline.yml
changelog.d/: 622.misc  623.misc  625.doc  626.misc  627.misc  629.misc  637.misc
integration-tests/: pyproject.toml
integration-tests/matrix_is_tester/: base_api_test.py  fakehs.py  is_api.py  launch_is.py  launcher.py  mailsink.py  test_account.py  test_bind_denied.py  test_logout.py  test_terms.py  test_v1.py  test_v2.py  test_versions.py
matrix_is_test/: launcher.py
scripts/: casefold_db.py
scripts-dev/: lint.sh
stubs/twisted/internet/: endpoints.pyi  error.pyi  ssl.pyi
stubs/twisted/names/: dns.pyi
stubs/twisted/python/: failure.pyi  log.pyi
stubs/twisted/web/: client.pyi  http.pyi  iweb.pyi  server.pyi
sydent/: __init__.py  sydent.py  types.py
sydent/config/: __init__.py  _base.py  crypto.py  email.py  general.py  http.py  sms.py
sydent/db/: accounts.py  hashing_metadata.py  invite_tokens.py  invite_tokens.sql  peers.py  peers.sql  sqlitedb.py  terms.py  threepid_associations.py  threepid_validation.sql  valsession.py
sydent/hs_federation/: types.py  verifier.py
sydent/http/: auth.py  blacklisting_reactor.py  federation_tls_options.py  httpclient.py  httpcommon.py  httpsclient.py  httpserver.py  matrixfederationagent.py  srvresolver.py
sydent/http/servlets/: __init__.py  accountservlet.py  authenticated_bind_threepid_servlet.py  authenticated_unbind_threepid_servlet.py  blindlysignstuffservlet.py  bulklookupservlet.py  emailservlet.py  getvalidated3pidservlet.py  hashdetailsservlet.py  logoutservlet.py  lookupservlet.py  lookupv2servlet.py  msisdnservlet.py  pubkeyservlets.py  registerservlet.py  replication.py  store_invite_servlet.py  termsservlet.py  threepidbindservlet.py  threepidunbindservlet.py  versions.py
sydent/replication/: peer.py  pusher.py
sydent/sms/: openmarket.py  types.py
sydent/terms/: terms.py
sydent/threepid/: __init__.py  bind.py  signer.py
sydent/users/: accounts.py
sydent/util/: __init__.py  emailutils.py  ip_range.py  ratelimiter.py  stringutils.py  ttlcache.py
sydent/validators/: __init__.py  common.py  emailvalidator.py  msisdnvalidator.py
tests/: conftest.py  test_auth.py  test_blacklisting.py  test_casefold_migration.py  test_email.py  test_httpcommon.py  test_invites.py  test_jinja_templates.py  test_msisdn.py  test_ratelimiter.py  test_register.py  test_replication.py  test_srvresolver.py  test_start.py  test_store_invite.py  test_threepidunbind.py  test_util.py  test_wellknown.py  utils.py
