[project]
name = "matrix-sydent"
version = "2.7.0"
description = "Reference Matrix Identity Verification and Lookup Server"
readme = "README.rst"
license = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
requires-python = ">=3.10,<4"
authors = [
    { name = "Matrix.org Team and Contributors", email = "packages@matrix.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "attrs>=19.1.0",
    "jinja2>=3.0.0",
    "matrix-common>=1.1.0,<2",
    "netaddr>=0.7.0",
    "phonenumbers>=8.12.32",
    "prometheus-client>=0.4.0",
    "pynacl>=1.2.1",
    "pyOpenSSL>=16.0.0",
    "pyyaml>=3.11",
    "service-identity>=1.0.0",
    "signedjson==1.1.1",
    "sortedcontainers>=2.1.0",
    "twisted>=18.4.0,<25",
    "unpaddedbase64>=1.1.0",
    "zope.interface>=4.6.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk>=0.7.2"]
prometheus = ["prometheus-client>=0.4.0"]

[project.scripts]
sydent = "sydent.sydent:main"

[project.urls]
Repository = "https://github.com/element-hq/sydent"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "matrix-is-tester",
    "mypy>=0.902",
    "mypy-zope>=0.3.1",
    "parameterized==0.8.1",
    "sentry-sdk",
    "types-Jinja2==2.11.9",
    "types-mock==4.0.8",
    "types-PyOpenSSL==21.0.3",
    "types-PyYAML==6.0.3",
    "towncrier>=21.9.0",
]

[tool.uv.workspace]
members = ["integration-tests"]

[tool.uv.sources]
matrix-is-tester = { workspace = true }

[tool.uv.build-backend]
module-name = "sydent"
module-root = ""

[tool.towncrier]
package = "sydent"
filename = "CHANGELOG.md"
directory = "changelog.d"
issue_format = "[\\#{issue}](https://github.com/element-hq/sydent/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docker"
name = "Updates to the Docker image"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Internal Changes"
showcontent = true

[tool.mypy]
plugins = "mypy_zope:plugin"
show_error_codes = true
namespace_packages = true
strict = true

files = [
    "sydent"
]
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = [
    "idna",
    "netaddr",
    "signedjson.*",
    "sortedcontainers",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "UP",         # pyupgrade
    "B",          # flake8-bugbear
    "C4",         # flake8-comprehensions
    "YTT",        # flake8-2020
    "SLOT",       # flake8-slots
    "T10",        # flake8-debugger
    "PIE",        # flake8-pie
    "EXE",        # flake8-executable
    "LOG",        # flake8-logging
    "G",          # flake8-logging-format
]
ignore = [
    "E501",       # line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["sydent"]
known-local-folder = ["tests", "matrix_is_tester"]

[build-system]
requires = ["uv_build>=0.11.3,<1"]
build-backend = "uv_build"
