[project]
name = "matrix-sydent"
version = "2.7.0"
description = "Reference Matrix Identity Verification and Lookup Server"
readme = "README.rst"
license = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
requires-python = ">=3.10,<4"
authors = [
    { name = "Matrix.org Team and Contributors", email = "packages@matrix.org" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

dependencies = [
    "attrs>=19.1.0",
    "jinja2>=3.0.0",
    "matrix-common>=1.1.0,<2",
    "netaddr>=0.7.0",
    "phonenumbers>=8.12.32",
    "prometheus-client>=0.4.0",
    "pynacl>=1.2.1",
    "pyOpenSSL>=16.0.0",
    "pyyaml>=3.11",
    "service-identity>=1.0.0",
    "signedjson==1.1.1",
    "sortedcontainers>=2.1.0",
    "twisted>=18.4.0",
    "unpaddedbase64>=1.1.0",
    "zope.interface>=4.6.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk>=0.7.2"]
prometheus = ["prometheus-client>=0.4.0"]

[project.scripts]
sydent = "sydent.sydent:main"

[project.urls]
Repository = "https://github.com/element-hq/sydent"

[dependency-groups]
dev = [
    "black>=23.1.0",
    "ruff==0.0.189",
    "isort==5.8.0",
    "matrix-is-tester @ git+https://github.com/matrix-org/matrix-is-tester@main",
    "mypy>=0.902",
    "mypy-zope>=0.3.1",
    "parameterized==0.8.1",
    "sentry-sdk",
    "types-Jinja2==2.11.9",
    "types-mock==4.0.8",
    "types-PyOpenSSL==21.0.3",
    "types-PyYAML==6.0.3",
    "towncrier>=21.9.0",
]

[tool.poetry]
packages = [{ include = "sydent" }]

[tool.towncrier]
package = "sydent"
filename = "CHANGELOG.md"
directory = "changelog.d"
issue_format = "[\\#{issue}](https://github.com/element-hq/sydent/issues/{issue})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docker"
name = "Updates to the Docker image"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Internal Changes"
showcontent = true

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py310']

[tool.mypy]
plugins = "mypy_zope:plugin"
show_error_codes = true
namespace_packages = true
strict = true

files = [
    "sydent"
]
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = [
    "idna",
    "netaddr",
    "signedjson.*",
    "sortedcontainers",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88

ignore = [
    "E501",
    "F401",
    "F821",
]
select = [
    "E",
    "W",
    "F",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
