[project]
name = "matrix-is-tester"
version = "0.1.0"
description = "Black-box integration testing for Matrix Identity Servers"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "Twisted>=19.2.1",
    "requests>=2.22.0",
    "six>=1.13.0",
]

[tool.uv.build-backend]
module-name = "matrix_is_tester"
module-root = ""

[build-system]
requires = ["uv_build>=0.11.3,<1"]
build-backend = "uv_build"
